# libsimple

./: meson.build  simple.cpp
include/: simple.h
